# 342pr2

./: CMakeLists.txt  README.md  gitignore
src/: cuda_main.cu  mpi_main.cpp  omp_main.cpp  seq_main.cpp
